Add Java version of Pandora2Warc conversion script